gitops/apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: radarr
  selector:
    app: radarr
