gitops/apps/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: bealv
spec:
  rules:
    - host: radarr.bealv.lan
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - radarr.bealv.lan
      secretName: tls-radarr
